force-app/main/default/objects/Account/fields/Director_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Director_of_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director of Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DirectorAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>