force-app/main/default/objects/Account/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <label>Guest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>