force-app/main/default/objects/Account/fields/Testing_Temp_Field__c.field-meta.xml
<CustomField>
    <fullName>Testing_Temp_Field__c</fullName>
    <description>Testing Temp Field - Copado (will be deleted)</description>
    <label>Testing Temp Field_1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>